# elliptic-curves-ssr

./: .gitignore  AUTHORS  MANIFEST  Makefile  Makefile.common  README.md  _CoqProject  configure  coq-mathcomp-elliptic-curves.opam  dune-project
.github/workflows/: ci.yml
common/: .dir-locals.el  fracfield.v  polyall.v  polydec.v  polyfrac.v  ssrring.v  xmatrix.v  xseq.v
scripts/: licence.py  timed
src/: .dir-locals.el  dune.in  ec.v  ecdiv.v  ecdivlr.v  eceval.v  ecgroup.v  ecorder.v  ecpoly.v  ecpolyfrac.v  ecrr.v  fracfield.v  fraction.v  freeg.v  polyall.v  polydec.v  polyfrac.v  polyorder.v  ssrring.v  viete.v  xmatrix.v  xseq.v
ssreflect/: Makefile
